@@ -92,7 +92,8 @@ Version 1.11.0-svn:
    * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
      platforms using XDG layout (no compiled-in preferences path override).
    * Fixed bug #19503 : "maximum auto saves" setting now works correctly.
-
+   * Units can now have a new value ("vision") which is used for sight range instead of movement.
+   * Vision range can have its own costs now.
 
 Version 1.10.0:
  * Campaigns:
